--- a/app/globals.css
+++ b/app/globals.css
@@ -5,16 +5,25 @@
 /*Text editor */
 
 .rdw-editor-wrapper {
-  @apply  h-fit p-4;
+  @apply h-fit p-4;
 }
 .rdw-editor-toolbar {
   @apply bg-blue-700 flex justify-between p-2 items-center h-12;
 }
-.editor-container{
+.editor-container {
   height: calc(35rem) !important ;
   @apply bg-slate-600;
 }
 
-.public-DraftStyleDefault-block{
+.public-DraftStyleDefault-block {
   margin: 0 !important;
+}
+
+.center-model {
+  @apply left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2 fixed;
+}
+.answers-arrow {
+  &::before {
+    @apply right-2 top-1/2 transform  -translate-y-1/2 absolute;
+  }
 }
