--- a/app/globals.css
+++ b/app/globals.css
@@ -127,7 +127,6 @@
     );
   background-size: var(--s) calc(var(--s) * tan(30deg));
   border-radius: 24px;
-
 }
 
 .svg-background-6 {
@@ -341,7 +340,49 @@
 }
 .forum-type::before {
   content: "•";
-  @apply  text-white  px-2 text-xl;
+  @apply text-white  px-2 text-xl;
 }
 
+.avatars {
+  --avatar-size: 2rem;
+  --transition-duration: 300ms;
+  --column-size: calc(var(--avatar-size) / 2);
 
+  display: grid;
+  grid-template-columns: repeat(var(--avatar-count), var(--column-size));
+
+  @apply p-2 max-w-full;
+  transition: grid-template-columns 0.3s ease-in-out;
+  transition-delay: var(--transition-duration);
+}
+
+.avatars:hover,
+.avatars:focus-within {
+  --column-size: calc(var(--avatar-size) * 1.2);
+  transition-delay: 0ms;
+}
+
+.avatars .avatar {
+  width: var(--avatar-size);
+  aspect-ratio: 1;
+  object-fit: cover;
+  @apply rounded-full border-4 border-white shadow-md;
+  box-shadow: 0.25rem 0.25rem 0.5rem hsl(0 0% 0% / 0.2);
+
+  transition: scale var(--transition-duration), border-color 2s;
+}
+
+.avatars .avatar:hover,
+.avatars .avatar:focus {
+  scale: 2;
+  z-index: 2;
+  border-color: aqua;
+}
+
+@supports selector(:has(+ *)) {
+  .avatars .avatar:hover + .avatar,
+  .avatars .avatar:has(+ .avatar:hover) {
+    scale: 1.5;
+    border-color: aquamarine;
+  }
+}
