--- a/app/globals.css
+++ b/app/globals.css
@@ -125,6 +125,7 @@
       var(--c3) 0 50%
     );
   background-size: var(--s) calc(var(--s) * tan(30deg));
+  border-radius: 32px;
 }
 
 .svg-background-6 {
