--- a/app/globals.css
+++ b/app/globals.css
@@ -487,33 +487,13 @@
   transition: height 1.3s;
 }
 
-.therapist-card-li {
-  perspective: 1000px;
-}
-.therapist-card-con {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  transition: transform 1s;
-  transform-style: preserve-3d;
-}
-
-.therapist-card-con:has(input:checked) {
-  transform: rotateY(180deg);
-}
-
 .therapist-card {
-  position: absolute;
-  -webkit-backface-visibility: hidden; /* Safari */
-  backface-visibility: hidden;
   border-radius: 1rem;
-  height: 30rem;
-  display: grid;
+
   grid-template-rows: 7rem 1.75rem calc(100% - 10.75rem);
   grid-template-columns: 50% 50%;
-  justify-items: center;
-  row-gap: 1rem;
   box-shadow: 0px 1rem 1.5rem rgba(0, 0, 0, 0.5);
+  @apply h-[30rem] gap-y-4 items-center justify-items-center grid rounded;
   .hero {
     @apply h-full w-full rounded-t-2xl;
     grid-area: 1/1/2/-1;
@@ -523,7 +503,6 @@
     align-self: end;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
     transition: transform 200ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
-
     @apply rounded-full;
   }
   img:hover {
@@ -533,8 +512,6 @@
     grid-area: 3/1/-1/-1;
   }
 }
-
-
 
 .flip {
   transform: rotateY(180deg);
@@ -546,4 +523,3 @@
   gap: 1rem;
   height: 100%;
 }
-
