--- a/app/globals.css
+++ b/app/globals.css
@@ -517,9 +517,12 @@
   transform: rotateY(180deg);
 }
 .therapist-list {
-  padding: 1rem;
-  display: grid;
+  @apply gap-4 p-4 grid;
   grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
-  gap: 1rem;
-  height: 100%;
+}
+
+
+.text{
+  background-color: black;
+  font-size: larger;
 }
