--- a/app/globals.css
+++ b/app/globals.css
@@ -526,3 +526,26 @@
   background-color: black;
   font-size: larger;
 }
+
+@layer utilities {
+  @keyframes l2-1 {
+    0%   { top: 0; left: 0; }
+    25%  { top: 100%; left: 0; }
+    50%  { top: 100%; left: 100%; }
+    75%  { top: 0; left: 100%; }
+    100% { top: 0; left: 0; }
+  }
+
+  @keyframes l2-2 {
+    40%, 50% { transform: rotate(0.25turn) scale(0.5); }
+    100% { transform: rotate(0.5turn) scale(1); }
+  }
+
+  .animate-l2-1 {
+    animation: l2-1 2s infinite;
+  }
+
+  .animate-l2-2 {
+    animation: l2-2 1s infinite;
+  }
+}
